assets/css/style.css
body {
    background-image: url("../img/crystal-bg.png");
    background-repeat: no-repeat; 
    background-size: cover; 
    color: white;
}

#container {
    margin: 3em;
    padding: 1em;
    display: grid;
}

h1, h2, h3, h4, h5 {
    justify-self: center;
    text-align: center;
    font-family: 'Astloch', cursive;
    background-color: rgb(36, 36, 105);
    padding: .5em;
    border-radius: 24px;
    border: 1px solid white;
}

h1 {
    font-size: 60px;
}

h3 {
    font-size: 40px;
    background-color: rgb(75, 15, 170);
}

h4 {
    font-size: 30px;
    background-color: rgb(75, 15, 170);
}

#first {
    display: grid;
}

#second {
    display: none;
    margin: 0;
}


#instructions {
    justify-self: center;
    text-align: center;
    margin: 2em 1em 2em 1em;
    background-color: rgb(36, 36, 105);
    padding: 1.5em;
    border-radius: 24px;
    border: 1px solid white;
    line-height: 2.5;
    font-size: 28px;
    font-family: 'Germania One', cursive;
    letter-spacing: 1px;
}

#number-to-match, #user-number {
    background-color: rgb(75, 15, 170);
    justify-self: center;
    text-align: center;
    border-radius: 24px;
    border: 1px solid white;
    font-size: 100px;
    font-family: 'Germania One', cursive;
    letter-spacing: 1px;
    width: 2em;
    height: 1em;
    margin: .5em 1em .5em 1em;
}

#user-number {
    margin: .3em 1em .2em 1em;
}

#crystal-container {
    justify-self: center;
}

.crystal {
    margin: 1em;
    width: 10em;
    height: 10em;
    border-radius: 24px;
    border: 4px solid white;
}

#total-number {
    margin-top: 1em;
}

#win-and-loss-div {
    background-color: rgb(75, 15, 170);
    justify-self: center;
    text-align: center;
    border-radius: 24px;
    border: 1px solid white;
    font-family: 'Germania One', cursive;
    font-size: 40px;
    margin: .5em 1em .5em 1em;
    padding: .5em;
    letter-spacing: 2px;
}

#win, #lose {
    padding-right: 1em;
    padding-left: .4em;
    letter-spacing: 2px;
}

#lose {
    padding-right: .1em;
}

#instructionsToggle {
    display: none;
    margin-top: .2em;
}

@media screen and (max-width: 1900px) {

    #container {
        margin: 3em;
        padding: 1em;
    }

    h1, h2, h3, h4 {
      
        padding: .5em;
        
    }

    h1 {
        font-size: 30px;
    }

    h3 {
        font-size: 30px;
    }

    #total-number {
        margin-top: 1em;
    }

    #instructions {
       
        font-size: 14px;
      
    }

    #number-to-match, #user-number {
        
        font-size: 50px;
        
    }

    .crystal {
        width: 5em;
        height: 5em;
        margin: .5em;
    }

    #win-and-loss-div {
    
        font-size: 30px;
        margin-top: .2em;
      
    }

  } 

  @media screen and (max-width: 600px) {
    
    #container {
        grid-template-columns: 100%;
    }

    #crystal-container {
        justify-self: center;
        display: grid;
        grid-template-rows: 50% 50%;
    }

   #crystal1, #crystal2 {
       grid-row: 1;
       margin-bottom: .4em;
   }

    

  }
 

  @media screen and (max-width: 470px) {
    
    

   #container {
       grid-template-columns: 100%;
   }

   #instructions {
       padding: .4em;
       letter-spacing: 0px;
   }
    

  }

 
 

